--- a/TestDoitServer/Source/UI/LoginViewController.xib
+++ b/TestDoitServer/Source/UI/LoginViewController.xib
@@ -52,7 +52,7 @@
                         <constraint firstAttribute="width" constant="160" id="Lkk-TL-L4C"/>
                     </constraints>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asd-6d-Dwh">
+                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asd-6d-Dwh">
                     <rect key="frame" x="138" y="153" width="99.5" height="100"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -60,6 +60,9 @@
                         <constraint firstAttribute="height" constant="100" id="ZSq-1P-nhw"/>
                     </constraints>
                     <state key="normal" title="Pick Image"/>
+                    <connections>
+                        <action selector="onChooseImageButton:" destination="-1" eventType="touchUpInside" id="R6a-NA-ykC"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rOr-ak-ZLA">
                     <rect key="frame" x="107.5" y="375" width="160" height="44"/>
