--- a/TestDoitServer/Source/UI/PictureListViewController/PictureCollectionViewCell.xib
+++ b/TestDoitServer/Source/UI/PictureListViewController/PictureCollectionViewCell.xib
@@ -1,19 +1,59 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PictureCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PictureCollectionViewCell" customModule="TestDoitServer" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="132" height="138"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="132" height="138"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rmo-kS-K9T">
+                        <rect key="frame" x="0.0" y="0.0" width="132" height="96"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4I0-O3-9cy">
+                        <rect key="frame" x="0.0" y="96" width="132" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G77-UW-f9q">
+                        <rect key="frame" x="0.0" y="117" width="132" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="4I0-O3-9cy" secondAttribute="trailing" id="0Fs-0j-xov"/>
+                <constraint firstItem="G77-UW-f9q" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="D3J-qF-psW"/>
+                <constraint firstItem="4I0-O3-9cy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Ixd-LA-7Yv"/>
+                <constraint firstAttribute="bottom" secondItem="G77-UW-f9q" secondAttribute="bottom" id="KC4-fq-b1x"/>
+                <constraint firstAttribute="trailing" secondItem="Rmo-kS-K9T" secondAttribute="trailing" id="V6F-yU-ACX"/>
+                <constraint firstAttribute="trailing" secondItem="G77-UW-f9q" secondAttribute="trailing" id="cTr-ic-3Wq"/>
+                <constraint firstItem="Rmo-kS-K9T" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="kHA-6Y-1k0"/>
+                <constraint firstItem="4I0-O3-9cy" firstAttribute="top" secondItem="Rmo-kS-K9T" secondAttribute="bottom" id="kwQ-tk-cqh"/>
+                <constraint firstItem="Rmo-kS-K9T" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="nSv-be-Ko2"/>
+                <constraint firstItem="G77-UW-f9q" firstAttribute="top" secondItem="4I0-O3-9cy" secondAttribute="bottom" id="uLf-qQ-noB"/>
+            </constraints>
+            <size key="customSize" width="132" height="138"/>
+            <connections>
+                <outlet property="addressLabel" destination="G77-UW-f9q" id="t6P-RR-yrQ"/>
+                <outlet property="imageView" destination="Rmo-kS-K9T" id="v10-d4-gJp"/>
+                <outlet property="weatherLabel" destination="4I0-O3-9cy" id="rRb-Rm-bk6"/>
+            </connections>
+            <point key="canvasLocation" x="-106" y="-81"/>
         </collectionViewCell>
     </objects>
 </document>
