--- a/TestDoitServer/Source/UI/PictureListViewController/PictureCollectionViewCell.xib
+++ b/TestDoitServer/Source/UI/PictureListViewController/PictureCollectionViewCell.xib
@@ -19,22 +19,29 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rmo-kS-K9T">
-                        <rect key="frame" x="0.0" y="0.0" width="132" height="96"/>
+                        <rect key="frame" x="0.0" y="0.0" width="132" height="104"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4I0-O3-9cy">
-                        <rect key="frame" x="0.0" y="96" width="132" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4I0-O3-9cy">
+                        <rect key="frame" x="0.0" y="104" width="132" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="jIG-bd-F5q"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G77-UW-f9q">
-                        <rect key="frame" x="0.0" y="117" width="132" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G77-UW-f9q">
+                        <rect key="frame" x="0.0" y="121" width="132" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="d1N-at-5xh"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="4I0-O3-9cy" secondAttribute="trailing" id="0Fs-0j-xov"/>
                 <constraint firstItem="G77-UW-f9q" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="D3J-qF-psW"/>
