--- a/TestDoitServer/Source/UI/PictureListViewController/PictureListViewController.xib
+++ b/TestDoitServer/Source/UI/PictureListViewController/PictureListViewController.xib
@@ -20,15 +20,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8gc-4k-6Z2">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8gc-4k-6Z2">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2Rn-yn-3Ig">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="8" id="2Rn-yn-3Ig">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
                     </collectionViewFlowLayout>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="HE8-fS-F8h"/>
@@ -37,6 +36,12 @@
                 </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="8gc-4k-6Z2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="3N5-Xs-iHa"/>
+                <constraint firstAttribute="bottom" secondItem="8gc-4k-6Z2" secondAttribute="bottom" id="90F-WJ-fVO"/>
+                <constraint firstAttribute="trailing" secondItem="8gc-4k-6Z2" secondAttribute="trailing" id="tGP-uC-y9J"/>
+                <constraint firstItem="8gc-4k-6Z2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wYG-yf-AFD"/>
+            </constraints>
             <point key="canvasLocation" x="33.5" y="143.5"/>
         </view>
     </objects>
