--- a/TestDoitServer/Source/UI/PictureListViewController/PictureCollectionViewCell.xib
+++ b/TestDoitServer/Source/UI/PictureListViewController/PictureCollectionViewCell.xib
@@ -41,7 +41,7 @@
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="4I0-O3-9cy" secondAttribute="trailing" id="0Fs-0j-xov"/>
                 <constraint firstItem="G77-UW-f9q" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="D3J-qF-psW"/>
