--- a/TestDoitServer/Source/UI/PictureListViewController/GifViewController.xib
+++ b/TestDoitServer/Source/UI/PictureListViewController/GifViewController.xib
@@ -10,19 +10,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TempViewController" customModule="TestDoitServer" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GifViewController" customModule="TestDoitServer" customModuleProvider="target">
             <connections>
-                <outlet property="imageView" destination="TmU-LX-RiB" id="x6R-tj-irY"/>
+                <outlet property="imageView" destination="TmU-LX-RiB" id="ERP-Ny-6Go"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="378"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TmU-LX-RiB">
-                    <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                    <rect key="frame" x="0.0" y="1.5" width="375" height="375"/>
                     <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="TmU-LX-RiB" secondAttribute="height" multiplier="1:1" id="9of-Ee-1oT"/>
@@ -35,7 +35,8 @@
                 <constraint firstItem="TmU-LX-RiB" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="mHs-if-CMW"/>
                 <constraint firstItem="TmU-LX-RiB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tp9-OT-IXA"/>
             </constraints>
-            <point key="canvasLocation" x="34.5" y="100.5"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="34.5" y="-44"/>
         </view>
     </objects>
 </document>
