--- a/TestDoitServer/Source/UI/LoginViewController.xib
+++ b/TestDoitServer/Source/UI/LoginViewController.xib
@@ -44,7 +44,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="160" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="Pvg-6o-ahz"/>
                             </connections>
